fix: increase contrast

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: #409080;
+  background-color: #387e70;
   color: #ffffff;
   font-size: large;
   margin: 0rem;
